--- a/front/package.json
+++ b/front/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "pinia": "^2.0.11",
-    "vue": "^3.2.29",
+    "vue": "^3.2.30",
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
+    "@iconify/vue": "^3.1.3",
     "@rushstack/eslint-patch": "^1.1.0",
     "@types/node": "^16.11.22",
     "@vitejs/plugin-vue": "^2.1.0",
