--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,11 +1,13 @@
 anyio==3.5.0
 asgiref==3.5.0
 click==8.0.3
+dnspython==2.2.0
 fastapi==0.73.0
 h11==0.13.0
 httptools==0.3.0
 idna==3.3
 pydantic==1.9.0
+pymongo==4.0.1
 python-dotenv==0.19.2
 PyYAML==6.0
 sniffio==1.2.0
@@ -15,5 +17,3 @@ uvicorn==0.17.4
 uvloop==0.16.0
 watchgod==0.7
 websockets==10.1
-
-pymongo~=4.0.1
