--- a/papafront/package.json
+++ b/papafront/package.json
@@ -8,6 +8,8 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@vuelidate/core": "^2.0.0-alpha.34",
+    "@vuelidate/validators": "^2.0.0-alpha.26",
     "pinia": "^2.0.11",
     "vue": "^3.2.30",
     "vue-router": "^4.0.12"
