--- a/papafront/package.json
+++ b/papafront/package.json
@@ -11,6 +11,7 @@
     "@vuelidate/core": "^2.0.0-alpha.34",
     "@vuelidate/validators": "^2.0.0-alpha.26",
     "pinia": "^2.0.11",
+    "swiper": "^8.0.6",
     "vue": "^3.2.30",
     "vue-router": "^4.0.12"
   },
