--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -14,6 +14,7 @@ sniffio==1.2.0
 starlette==0.17.1
 typing_extensions==4.0.1
 uvicorn==0.17.4
-uvloop==0.16.0
 watchgod==0.7
 websockets==10.1
+
+certifi~=2021.10.8
