--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,6 +1,8 @@
 anyio==3.5.0
 asgiref==3.5.0
+certifi==2021.10.8
 click==8.0.3
+cloudinary==1.29.0
 dnspython==2.2.0
 fastapi==0.73.0
 h11==0.13.0
@@ -10,9 +12,11 @@ pydantic==1.9.0
 pymongo==4.0.1
 python-dotenv==0.19.2
 PyYAML==6.0
+six==1.16.0
 sniffio==1.2.0
 starlette==0.17.1
-typing_extensions==4.0.1
+typing-extensions==4.0.1
+urllib3==1.26.8
 uvicorn==0.17.4
 uvloop==0.16.0
 watchgod==0.7
