--- a/papafront/package.json
+++ b/papafront/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@vuelidate/core": "^2.0.0-alpha.34",
     "@vuelidate/validators": "^2.0.0-alpha.26",
+    "axios": "^0.26.0",
     "pinia": "^2.0.11",
     "swiper": "^8.0.6",
     "vue": "^3.2.30",
